--- a/voor-en-na-delen.html
+++ b/voor-en-na-delen.html
@@ -88,6 +88,7 @@
 
         main {
             padding: 20px;
+            padding-bottom: 80px; /* Added padding to avoid content being hidden behind the footer */
         }
 
         .page-content {
@@ -136,7 +137,7 @@
         }
 
         body.dark-mode #theme-toggle .material-icons {
-            color: var(--text-dark);
+            color: var (--text-dark);
             transform: rotate(360deg);
         }
     </style>
@@ -162,39 +163,40 @@
     <main>
         <div class="page-content">
             <h2>Voor- en nadelen</h2>
-            <p>Voordelen van de Europese Unie: 
-
-Vrije handel: Binnen de EU is er vrije handel tussen 27 landen. Dit betekent dat Nederland profiteert van een enorme markt en lagere prijzen voor veel producten. 
-
-Bescherming van consumenten: De EU stelt strenge regels op voor voedselveiligheid, medicijnen en consumentenrechten. Dit beschermt jou als consument. 
-
-Samenwerking tegen dreigingen: Door samen te werken met andere EU-landen kunnen we criminaliteit beter bestrijden en dreigingen zoals cyberaanvallen aanpakken. 
-
-Vrij reizen en studeren: Binnen de EU kun je vrij reizen, studeren en werken. Dit biedt kansen en verrijkt onze levens. 
-
-Nadelen van de Europese Unie: 
-
-Kosten: Lidmaatschap van de EU is niet gratis. Nederland draagt financieel bij aan de EU. Toch kunnen we dit zien als investering in onze veiligheid en welvaart. 
-
-Verlies van nationale autonomie: Sommige mensen zijn bezorgd dat de EU te veel macht heeft en dat nationale besluitvorming wordt beïnvloed. 
-
-Economische ongelijkheid: Niet alle EU-landen zijn even welvarend. Cohesiebeleid probeert deze kloof te dichten, maar het blijft een uitdaging. 
-
-In het kort: de EU biedt voordelen op het gebied van handel, veiligheid en consumentenbescherming, maar er zijn ook kosten en zorgen. Het is belangrijk om een evenwichtige afweging te maken en je eigen mening te vormen 
-
-In 2002 werden de eurobankbiljetten en -munten ingevoerd in 12 EU-landen, en inmiddels hebben in totaal 20 lidstaten hun nationale munt ingeruild voor de euro. Meer dan 75 % van de EU-burgers — ongeveer 347 miljoen van ons — gebruiken de euro elke dag. 
-
-  
-
-Het gebruiken van een gemeenschappelijke munt in een interne markt waar mensen uit verschillende landen samen handel drijven heeft een groot aantal voordelen. Consumenten kunnen prijzen thuis, in het buitenland en online gemakkelijker vergelijken. Bedrijven kunnen één munt gebruiken om prijzen te berekenen en producten en diensten in rekening te brengen bij klanten en krijgen niet te maken met wisselkoersschommelingen. Zo blijven de prijzen stabiel. 
-
-Veilig en gemakkelijk reizen binnen de EU 
-
-Door de COVID-19-pandemie is reizen tijdelijk lastiger geworden. Maar onder normale omstandigheden is reizen in Europa veel gemakkelijker dan vroeger. Dat is het geval omdat de meeste EU-landen, en sommige niet-EU-landen, de grenscontroles tussen hun landen hebben afgeschaft. Deze afschaffing van grenscontroles was mogelijk dankzij het Akkoord van Schengen, dat is vernoemd naar het dorp in Luxemburg waar het in 1985 werd ondertekend. 
-
-  
-
-Als Europees burger kun je zonder paspoort binnen de 27 “Schengenlanden” reizen: 23 EU-landen (België, Denemarken, Duitsland, Estland, Finland, Frankrijk, Griekenland, Hongarije, Italië, Kroatië, Letland, Litouwen, Luxemburg, Malta, Nederland, Oostenrijk, Polen, Portugal, Slovenië, Slowakije, Spanje, Tsjechië en Zweden) plus IJsland, Liechtenstein, Noorwegen en Zwitserland. Bulgarije, Cyprus, Ierland en Roemenië maken momenteel geen deel uit van het Schengengebied. Wanneer je reist naar of terugkomt van een land buiten het Schengengebied, moet je een geldig paspoort of identiteitsbewijs laten zien. </p>
+            <h3>Voordelen van de Europese Unie:</h3>
+            <ul>
+                <li>
+                    <strong>Vrije handel:</strong> Binnen de EU is er vrije handel tussen 27 landen. Dit betekent dat Nederland profiteert van een enorme markt en lagere prijzen voor veel producten.
+                </li>
+                <li>
+                    <strong>Bescherming van consumenten:</strong> De EU stelt strenge regels op voor voedselveiligheid, medicijnen en consumentenrechten. Dit beschermt jou als consument.
+                </li>
+                <li>
+                    <strong>Samenwerking tegen dreigingen:</strong> Door samen te werken met andere EU-landen kunnen we criminaliteit beter bestrijden en dreigingen zoals cyberaanvallen aanpakken.
+                </li>
+                <li>
+                    <strong>Vrij reizen en studeren:</strong> Binnen de EU kun je vrij reizen, studeren en werken. Dit biedt kansen en verrijkt onze levens.
+                </li>
+            </ul>
+            <h3>Nadelen van de Europese Unie:</h3>
+            <ul>
+                <li>
+                    <strong>Kosten:</strong> Lidmaatschap van de EU is niet gratis. Nederland draagt financieel bij aan de EU. Toch kunnen we dit zien als investering in onze veiligheid en welvaart.
+                </li>
+                <li>
+                    <strong>Verlies van nationale autonomie:</strong> Sommige mensen zijn bezorgd dat de EU te veel macht heeft en dat nationale besluitvorming wordt beïnvloed.
+                </li>
+                <li>
+                    <strong>Economische ongelijkheid:</strong> Niet alle EU-landen zijn even welvarend. Cohesiebeleid probeert deze kloof te dichten, maar het blijft een uitdaging.
+                </li>
+            </ul>
+            <p>In het kort: de EU biedt voordelen op het gebied van handel, veiligheid en consumentenbescherming, maar er zijn ook kosten en zorgen. Het is belangrijk om een evenwichtige afweging te maken en je eigen mening te vormen.</p>
+            <h3>De Euro:</h3>
+            <p>In 2002 werden de eurobankbiljetten en -munten ingevoerd in 12 EU-landen, en inmiddels hebben in totaal 20 lidstaten hun nationale munt ingeruild voor de euro. Meer dan 75% van de EU-burgers — ongeveer 347 miljoen van ons — gebruiken de euro elke dag.</p>
+            <p>Het gebruiken van een gemeenschappelijke munt in een interne markt waar mensen uit verschillende landen samen handel drijven heeft een groot aantal voordelen. Consumenten kunnen prijzen thuis, in het buitenland en online gemakkelijker vergelijken. Bedrijven kunnen één munt gebruiken om prijzen te berekenen en producten en diensten in rekening te brengen bij klanten en krijgen niet te maken met wisselkoersschommelingen. Zo blijven de prijzen stabiel.</p>
+            <h3>Veilig en gemakkelijk reizen binnen de EU:</h3>
+            <p>Door de COVID-19-pandemie is reizen tijdelijk lastiger geworden. Maar onder normale omstandigheden is reizen in Europa veel gemakkelijker dan vroeger. Dat is het geval omdat de meeste EU-landen, en sommige niet-EU-landen, de grenscontroles tussen hun landen hebben afgeschaft. Deze afschaffing van grenscontroles was mogelijk dankzij het Akkoord van Schengen, dat is vernoemd naar het dorp in Luxemburg waar het in 1985 werd ondertekend.</p>
+            <p>Als Europees burger kun je zonder paspoort binnen de 27 “Schengenlanden” reizen: 23 EU-landen (België, Denemarken, Duitsland, Estland, Finland, Frankrijk, Griekenland, Hongarije, Italië, Kroatië, Letland, Litouwen, Luxemburg, Malta, Nederland, Oostenrijk, Polen, Portugal, Slovenië, Slowakije, Spanje, Tsjechië en Zweden) plus IJsland, Liechtenstein, Noorwegen en Zwitserland. Bulgarije, Cyprus, Ierland en Roemenië maken momenteel geen deel uit van het Schengengebied. Wanneer je reist naar of terugkomt van een land buiten het Schengengebied, moet je een geldig paspoort of identiteitsbewijs laten zien.</p>
         </div>
     </main>
     <div class="footer">
